[package]
name = "close_fds"
version = "0.2.0"
edition = "2018"

description = "A library that makes it easy to close all open file descriptors."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["os::unix-apis"]
repository = "https://github.com/cptpcrd/close_fds"

[dependencies]
libc = "0.2"
